Upgrade version of dependencies